[package]
name = "beolyd5_controller"
description = "Software that understands the Bang & Olufsen BeoSound 5 controller"
authors = ["Lars Baunwall"]
documentation = "https://github.com/larsbaunwall/beolyd5"
repository = "https://github.com/larsbaunwall/beolyd5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.5.0"