[package]
name = "beolyd5_controller"
description = "USB HID library that understands the Bang & Olufsen BeoSound 5 controller"
license = "Apache-2.0"
authors = ["Lars Baunwall"]
documentation = "https://github.com/larsbaunwall/beolyd5"
repository = "https://github.com/larsbaunwall/beolyd5"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"