[package]
name = "bs5-controller-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["Lars Baunwall"]
license = "Apache-2.0"
repository = "https://github.com/larsbaunwall/beolyd5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
beolyd5_controller = "0.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
