[package]
name = "bs5-controller-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["Lars Baunwall"]
license = "Apache-2.0"
repository = "https://github.com/larsbaunwall/beolyd5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
beolyd5_controller = "1.0.2"
tauri-plugin-shell = "2"
